# llpsi-html

./: .gitignore  README.md  llpsi.py  pyproject.toml
data/: forcellini.lock.json  golden.json  lessons.json  memory_cards.json  project.json
input/: Nepos - Epaminonda.docx
src/llpsi_html/: __init__.py  cli.py  render.py  source.py  verify.py
templates/: fragments.html  student.css  student.html
